fixed scrollbar for modal

--- a/app/globals.css
+++ b/app/globals.css
@@ -21,3 +21,16 @@ body {
   background: var(--background);
   color: var(--foreground);
 }
+@import "tailwindcss";
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    scrollbar-width: thin;
+    scrollbar-color: rgb(75, 75, 75) black;
+  
+  }
+  .no-scrollbar {
+    scrollbar-width: thin;
+    scrollbar-color: rgb(75, 75, 75) black;
+  }
+}
+
